--- a/CRUD-OOP.Tests/CRUD-OOP.Tests.csproj
+++ b/CRUD-OOP.Tests/CRUD-OOP.Tests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CRUD-OOP.Core\CRUD-OOP.Core.csproj" />
+  </ItemGroup>
+
 </Project>
