Added repository and models. Added ability to get, save and update author.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ CRUD-OOP.MVC/bin/
 CRUD-OOP.MVC/obj/
 CRUD-OOP.Tests/obj/
 CRUD-OOP.Tests/bin/
+CRUD-OOP.SharedKernel/bin/
+CRUD-OOP.SharedKernel/obj/
